Bug 1681107 - Fix race condition of calling CompositorBridgeChild::SendPause() r=rmader,stransky

Differential Revision: https://phabricator.services.mozilla.com/D101693